=== and the other UPGRADE files for older releases.
===
==============================================================================

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0-cert3 to Asterisk 13.1-cert4 --
------------------------------------------------------------------------------

AMI
------------------
 * Added the Linkedid header to the common channel headers listed for each
   channel in AMI events.

res_pjsip
------------------
* A new 'rtp_keepalive' endpoint option has been added. This option specifies
  an interval, in seconds, at which we will send RTP comfort noise packets to
  the endpoint. This functions identically to chan_sip's "rtpkeepalive" option.

* New 'rtp_timeout' and 'rtp_timeout_hold' endpoint options have been added.
  These options specify the amount of time, in seconds, that Asterisk will wait
  before terminating the call due to lack of received RTP. These are identical
  to chan_sip's rtptimeout and rtpholdtimeout options.

res_pjsip_outbound_registration
-------------------------------
* A new 'fatal_retry_interval' option has been added to outbound registration.
  When set (default is zero), and upon receiving a failure response to an
  outbound registration, registration is retried at the given interval up to
  'max_retries'.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0-cert1 to Asterisk 13.1-cert2 --
------------------------------------------------------------------------------

res_pjsip
------------------
 * A new 'endpoint_identifier_order' option has been added that allows one to
   set the order by which endpoint identifiers are processed and checked. This
   option is specified under the 'global' type configuration section.

------------------------------------------------------------------------------